[package]
name = "egui_glfw"
version = "0.52.0"
authors = ["cohaereo <lucasteal@protonmail.com>", "walkiewicz125 <walkiewicz125@gmail.com>"]
edition = "2021"
description = "OpenGL backend for egui using GLFW"
homepage = "https://github.com/cohaereo/egui_glfw"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cohaereo/egui_glfw"
categories = ["gui", "graphics"]
keywords = ["glfw", "opengl", "egui", "gui", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
gl = "0.14"
glfw = "0.52"
egui = "0.27"

[dependencies.clipboard]
package = "cli-clipboard"
version = "0.4"
optional = true

[features]
default = ["clipboard"]
